tests/__snapshots__/validation-toBeConstructableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  23 | describe("argument for 'source'", () => {
  24 |   test("must be provided", () => {
  25 |     expect().type.toBeConstructableWith(false);
     |     ~~~~~~
  26 |   });
  27 | 
  28 |   test("must be a constructable expression", () => {

       at ./__typetests__/toBeConstructableWith.tst.ts:25:5

Error: An argument for 'source' must be a constructable expression.

  27 | 
  28 |   test("must be a constructable expression", () => {
  29 |     expect("abc").type.toBeConstructableWith();
     |            ~~~~~
  30 |     expect(123).type.toBeConstructableWith();
  31 |     expect(false).type.toBeConstructableWith();
  32 |     expect(undefined).type.toBeConstructableWith();

       at ./__typetests__/toBeConstructableWith.tst.ts:29:12

Error: An argument for 'source' must be a constructable expression.

  28 |   test("must be a constructable expression", () => {
  29 |     expect("abc").type.toBeConstructableWith();
  30 |     expect(123).type.toBeConstructableWith();
     |            ~~~
  31 |     expect(false).type.toBeConstructableWith();
  32 |     expect(undefined).type.toBeConstructableWith();
  33 |     expect(null).type.toBeConstructableWith();

       at ./__typetests__/toBeConstructableWith.tst.ts:30:12

Error: An argument for 'source' must be a constructable expression.

  29 |     expect("abc").type.toBeConstructableWith();
  30 |     expect(123).type.toBeConstructableWith();
  31 |     expect(false).type.toBeConstructableWith();
     |            ~~~~~
  32 |     expect(undefined).type.toBeConstructableWith();
  33 |     expect(null).type.toBeConstructableWith();
  34 | 

       at ./__typetests__/toBeConstructableWith.tst.ts:31:12

Error: An argument for 'source' must be a constructable expression.

  30 |     expect(123).type.toBeConstructableWith();
  31 |     expect(false).type.toBeConstructableWith();
  32 |     expect(undefined).type.toBeConstructableWith();
     |            ~~~~~~~~~
  33 |     expect(null).type.toBeConstructableWith();
  34 | 
  35 |     expect(() => undefined).type.toBeConstructableWith();

       at ./__typetests__/toBeConstructableWith.tst.ts:32:12

Error: An argument for 'source' must be a constructable expression.

  31 |     expect(false).type.toBeConstructableWith();
  32 |     expect(undefined).type.toBeConstructableWith();
  33 |     expect(null).type.toBeConstructableWith();
     |            ~~~~
  34 | 
  35 |     expect(() => undefined).type.toBeConstructableWith();
  36 |     expect(() => {}).type.toBeConstructableWith();

       at ./__typetests__/toBeConstructableWith.tst.ts:33:12

Error: An argument for 'source' must be a constructable expression.

  33 |     expect(null).type.toBeConstructableWith();
  34 | 
  35 |     expect(() => undefined).type.toBeConstructableWith();
     |            ~~~~~~~~~~~~~~~
  36 |     expect(() => {}).type.toBeConstructableWith();
  37 |     expect(() => () => false).type.toBeConstructableWith();
  38 | 

       at ./__typetests__/toBeConstructableWith.tst.ts:35:12

Error: An argument for 'source' must be a constructable expression.

  34 | 
  35 |     expect(() => undefined).type.toBeConstructableWith();
  36 |     expect(() => {}).type.toBeConstructableWith();
     |            ~~~~~~~~
  37 |     expect(() => () => false).type.toBeConstructableWith();
  38 | 
  39 |     expect(getPerson).type.toBeConstructableWith("abc");

       at ./__typetests__/toBeConstructableWith.tst.ts:36:12

Error: An argument for 'source' must be a constructable expression.

  35 |     expect(() => undefined).type.toBeConstructableWith();
  36 |     expect(() => {}).type.toBeConstructableWith();
  37 |     expect(() => () => false).type.toBeConstructableWith();
     |            ~~~~~~~~~~~~~~~~~
  38 | 
  39 |     expect(getPerson).type.toBeConstructableWith("abc");
  40 |     expect(getPerson("abc")).type.toBeConstructableWith("abc");

       at ./__typetests__/toBeConstructableWith.tst.ts:37:12

Error: An argument for 'source' must be a constructable expression.

Did you mean to use the '.toBeCallableWith()' matcher?

  37 |     expect(() => () => false).type.toBeConstructableWith();
  38 | 
  39 |     expect(getPerson).type.toBeConstructableWith("abc");
     |            ~~~~~~~~~
  40 |     expect(getPerson("abc")).type.toBeConstructableWith("abc");
  41 | 
  42 |     expect(getPersonGetter).type.toBeConstructableWith();

       at ./__typetests__/toBeConstructableWith.tst.ts:39:12

Error: An argument for 'source' must be a constructable expression.

  38 | 
  39 |     expect(getPerson).type.toBeConstructableWith("abc");
  40 |     expect(getPerson("abc")).type.toBeConstructableWith("abc");
     |            ~~~~~~~~~~~~~~~~
  41 | 
  42 |     expect(getPersonGetter).type.toBeConstructableWith();
  43 |     expect(getPersonGetter()).type.toBeConstructableWith("abc");

       at ./__typetests__/toBeConstructableWith.tst.ts:40:12

Error: An argument for 'source' must be a constructable expression.

Did you mean to use the '.toBeCallableWith()' matcher?

  40 |     expect(getPerson("abc")).type.toBeConstructableWith("abc");
  41 | 
  42 |     expect(getPersonGetter).type.toBeConstructableWith();
     |            ~~~~~~~~~~~~~~~
  43 |     expect(getPersonGetter()).type.toBeConstructableWith("abc");
  44 |     expect(getPersonConstructor).type.toBeConstructableWith("abc");
  45 |   });

       at ./__typetests__/toBeConstructableWith.tst.ts:42:12

Error: An argument for 'source' must be a constructable expression.

Did you mean to use the '.toBeCallableWith()' matcher?

  41 | 
  42 |     expect(getPersonGetter).type.toBeConstructableWith();
  43 |     expect(getPersonGetter()).type.toBeConstructableWith("abc");
     |            ~~~~~~~~~~~~~~~~~
  44 |     expect(getPersonConstructor).type.toBeConstructableWith("abc");
  45 |   });
  46 | 

       at ./__typetests__/toBeConstructableWith.tst.ts:43:12

Error: An argument for 'source' must be a constructable expression.

Did you mean to use the '.toBeCallableWith()' matcher?

  42 |     expect(getPersonGetter).type.toBeConstructableWith();
  43 |     expect(getPersonGetter()).type.toBeConstructableWith("abc");
  44 |     expect(getPersonConstructor).type.toBeConstructableWith("abc");
     |            ~~~~~~~~~~~~~~~~~~~~
  45 |   });
  46 | 
  47 |   test("allowed expressions", () => {

       at ./__typetests__/toBeConstructableWith.tst.ts:44:12

Error: An argument for 'source' cannot be of the 'any' type.

The 'any' type was rejected because the 'rejectAnyType' option is enabled.
If this check is necessary, pass 'any' as the type argument explicitly.

  51 | 
  52 |   test("is rejected type?", () => {
  53 |     expect("abc" as any).type.toBeConstructableWith();
     |            ~~~~~~~~~~~~
  54 |     expect("abc" as never).type.toBeConstructableWith();
  55 |   });
  56 | });

       at ./__typetests__/toBeConstructableWith.tst.ts:53:12

Error: An argument for 'source' cannot be of the 'never' type.

The 'never' type was rejected because the 'rejectNeverType' option is enabled.
If this check is necessary, pass 'never' as the type argument explicitly.

  52 |   test("is rejected type?", () => {
  53 |     expect("abc" as any).type.toBeConstructableWith();
  54 |     expect("abc" as never).type.toBeConstructableWith();
     |            ~~~~~~~~~~~~~~
  55 |   });
  56 | });
  57 | 

       at ./__typetests__/toBeConstructableWith.tst.ts:54:12

